--- a/new/year-block.html
+++ b/new/year-block.html
@@ -7,9 +7,9 @@
  * @FilePath: /notion/new/year-block.html
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-size: 48px;">
 
-<head style="font-size: 48px;">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
