--- a/new/year-block.html
+++ b/new/year-block.html
@@ -7,7 +7,7 @@
  * @FilePath: /notion/new/year-block.html
 -->
 <!DOCTYPE html>
-<html lang="en" style="font-size: 48px;">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,9 @@
     <script src="../flexibleMerge.js"></script>
     <script src="../lib/global.js?v=20220911.1"></script>
     <style type="text/css">
-        html,
+        html {
+            font-size: .38rem;
+        }
         body {
             background-color: #ffffff;
             font-size: .48rem;
