--- a/new/year-block.html
+++ b/new/year-block.html
@@ -18,7 +18,7 @@
     <script src="../lib/global.js?v=20220911.1"></script>
     <style type="text/css">
         html {
-            font-size: .38rem;
+            font-size: .38px;
         }
         body {
             background-color: #ffffff;
