--- a/new/year-block.html
+++ b/new/year-block.html
@@ -34,8 +34,8 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            align-content: flex-end;
             flex-direction: column;
+            align-items: center
         }
         .right {text-align: right;}
 
